--- a/src/component/chalisha/Chalisha.scss
+++ b/src/component/chalisha/Chalisha.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&family=Laila:wght@300;400;500;600;700&display=swap");
 * {
-  font-family: "Kalam", cursive;
+  //   font-family: "Kalam", cursive;
   font-family: "Laila", sans-serif;
 }
 .text-end {
@@ -15,9 +15,10 @@
 .text-lightyellow {
   color: lightyellow;
 }
+
 @mixin background-property {
   width: 100%;
-  height: 100vh;
+  height: 110vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
