--- a/src/component/chalisha/Chalisha.scss
+++ b/src/component/chalisha/Chalisha.scss
@@ -48,7 +48,7 @@
   @include background-property;
 }
 .four {
-  background-image: url("../../images/14.jpg");
+  background-image: url("../../images/21.jpg");
   @include background-property;
 }
 .five {
@@ -105,6 +105,7 @@
   @include flex-center;
 }
 .eighteen {
-  background-image: url("../../images/19.jpg");
+  background-image: url("../../images/17.jpg");
   @include background-property;
+  @include flex-center;
 }
